missing line break on space in main matches: fix margin for dots between matches

--- a/web-app/css/layout.css
+++ b/web-app/css/layout.css
@@ -226,7 +226,6 @@ a, button {transition: color .3s ease, border-color .3s ease;}
 }
 .wordtags.wordtags-big .wordtag::after {
     content: '\00B7';
-    margin: 0 1ch;
 }
 .wordtags.wordtags-big .wordtag:last-child::after {
     content: none;
